--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "@hpcc-js/wasm": "^1.4.1",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular2-template-loader": "^0.6.2",
     "async-mutex": "^0.2.2",
     "css-loader": "^3.5.3",
+    "d3-graphviz": "^2.6.1",
     "hammerjs": "2.0.8",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
